--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,10 @@
 body {
   margin: 0;
   padding:0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: rgb(1, 89, 1); */
+  /* background-color: rgb(3, 168, 244); */
 }
 
 code {
